# internal/infrastructure/api/handler/dto/campaign/campaign_basic_info_output_body.go
@@ -1,0 +1,17 @@
+package campaign
+
+import "meye-core/internal/application/campaign"
+
+type CampaignBasicInfoOutputBody struct {
+	ID       string `json:"id"`
+	MasterID string `json:"master_id"`
+	Name     string `json:"name"`
+}
+
+func MapCampaignBasicInfoOutputBody(c campaign.CampaignBasicInfoOutput) CampaignBasicInfoOutputBody {
+	return CampaignBasicInfoOutputBody{
+		ID:       c.ID,
+		MasterID: c.MasterID,
+		Name:     c.Name,
+	}
+}
